@@ -16,6 +16,7 @@ export(graphAnalysis)
 export(BonferroniHolmGraph)
 export(graphFromBretzEtAl2011)
 export(truncatedHolm)
+export(fixedSequence)
 export(generalSuccessive)
 export(simpleSuccessiveI)
 export(simpleSuccessiveII)
